// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button disabled renders correctly! 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  disabled={true}
  type="button"
>
  <p
    className="text undefined"
  />
</button>
`;

exports[`Button loading renders correctly! 1`] = `
<button
  className="text text_type_button text_color_primary button undefined loader "
  disabled={true}
  type="button"
>
  <img
    alt="Загрузка."
    className="loader_icon"
    src="loader.svg"
  />
</button>
`;

exports[`Button renders correctly with text! 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  name="Рассчитать"
  type="button"
>
  <p
    className="text undefined"
  >
    Рассчитать
  </p>
</button>
`;

exports[`Button renders correctly without text! 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  type="button"
>
  <p
    className="text undefined"
  />
</button>
`;
